# vfx_turnover

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO_edl_library.md  TODO_merge_ale.md  pyproject.toml  requirements.txt  tab_to_pdf.py  vfx_turnover.py  vfx_turnover.spec
.claude/commands/: vfx-clip-notes.md  vfx-ids.md  vfx-markers.md  vfx-merge.md  vfx-pulls.md  vfx-rename.md  vfx-report.md  vfx-status.md  vfx-subcaps.md  vfx-tab.md
.claude/skills/pyaaf2/: SKILL.md
.claude/skills/vfx-turnover/: SKILL.md
.claude/skills/vfx-turnover/skills/vfx-ids/: SKILL.md
.claude/skills/vfx-turnover/skills/vfx-markers/: SKILL.md
.claude/skills/vfx-turnover/skills/vfx-pulls/: SKILL.md
.claude/skills/vfx-turnover/skills/vfx-status/: SKILL.md
.claude/skills/vfx-turnover/skills/vfx-tab/: SKILL.md
test/: EPSV_traccia VFX_129_pulls.edl
