[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vfx-turnover"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyaaf2",
    "timecode",
    "reportlab",
]

[project.scripts]
vfx-turnover = "vfx_turnover:main"
tab-to-pdf = "tab_to_pdf:main"

[tool.setuptools]
py-modules = ["vfx_turnover", "tab_to_pdf"]
